[package]
name = "docker_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.19"
minijinja = "1.0.0"
reqwest = "0.11"
serde_json = "1.0"
serde = {version = "1.0.145", features = ["derive"]}